test/testdata/classes/methods/init/invalid_property_access_error.lox
class Foo {
  init() {}
}
Foo().init.x; // error: property access is not valid for 'function' object
